# Haskell-Pipes-Safe-Library

./: .travis.yml  LICENSE  README.md  changelog.md  default.nix  pipes-safe.cabal  release.nix  shell.nix  stack.yaml
.github/workflows/: haskell.yml
Control/Proxy/: Safe.hs
Control/Proxy/Safe/: Core.hs  Prelude.hs  SafeIO.hs  Tutorial.hs
Pipes/: Safe.hs
Pipes/Safe/: Internal.hs
configurations/: ghc-8.10.project  ghc-9.0.project  ghc-9.2.project
src/Pipes/: Example.hs  Safe.hs
src/Pipes/Safe/: Prelude.hs
