Name: pipes-safe
Version: 1.1.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Pipes-Safe-Library/issues
Synopsis: Safety for the pipes ecosystem
Description:
    This package adds resource management and exception handling to the @pipes@
    ecosystem.  Notable features include:
    .
    * /Resource Safety/: Guarantee finalization using @finally@, @bracket@ and
      more
    .
    * /Laziness/: Only acquire resources when you need them
    .
    * /Exception safe/: Even against asynchronous exceptions!
    .
    * /Native Exception Handling/: Catch and resume from exceptions within any
      @Session@
    .
    * /No Buy-in/: Managed pipes play nice with unmanaged pipes
    .
    Import @Control.Proxy.Safe@ to use this library
    .
    Read @Control.Proxy.Safe.Tutorial@ for an introductory tutorial.
Category: Control, Pipes, Proxies
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Pipes-Safe-Library

Library
    Build-Depends:
        base         >= 4       && < 5  ,
        mmorph       >= 1.0.0   && < 1.1,
        transformers >= 0.2.0.0 && < 0.4,
        pipes        >= 4.0.0   && < 4.1
    Exposed-Modules:
        Pipes.Safe
--      Control.Proxy.Safe.Tutorial
    GHC-Options: -O2
