Name: pipes-safe
Version: 2.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Pipes-Safe-Library/issues
Synopsis: Safety for the pipes ecosystem
Description:
    This package adds resource management and exception handling to the @pipes@
    ecosystem.
    .
    Notable features include:
    .
    * /Resource Safety/: Guarantee finalization using @finally@, @bracket@ and
      more
    .
    * /Exception Safety/: Even against asynchronous exceptions!
    .
    * /Laziness/: Only acquire resources when you need them
    .
    * /Promptness/: Finalize resources early when you are done with them
    .
    * /Native Exception Handling/: Catch and resume from exceptions inside pipes
    .
    * /No Buy-in/: Mix resource-safe pipes with unmanaged pipes using @hoist@
Category: Control, Pipes, Error Handling
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Pipes-Safe-Library

Library
    Build-Depends:
        base         >= 4       && < 5  ,
        containers   >= 0.3.0.0 && < 0.6,
        exceptions   >= 0.3.2   && < 0.4,
        transformers >= 0.2.0.0 && < 0.4,
        pipes        >= 4.0.0   && < 4.1
    Exposed-Modules:
        Pipes.Safe,
        Pipes.Safe.Prelude
    HS-Source-Dirs: src
    GHC-Options: -O2 -Wall
